tests/fixtures/positive/potential-bugs/PropertyUsedBeforeDeclaration.kt
package fixtures.positive.potentialbugs

class PropertyUsedBeforeDeclaration {
    val first = second
    val second = 42
}
