tests/fixtures/negative/potential-bugs/PropertyUsedBeforeDeclaration.kt
package fixtures.negative.potentialbugs

class PropertyUsedBeforeDeclaration {
    fun example() {
        val x = 1
        println(x)
    }
}
